# cmake-examples

./: .gitignore  README.md
CeresApp/: CMakeLists.txt  README.md
CeresApp/cmake/: compileOptions.cmake
CeresApp/source/: main.cpp
CeresLib/: CMakeLists.txt
CeresLib/cmake/: ceres.cmake  config.cmake.in  dependencies.cmake  eigen.cmake  install.cmake  version.hpp.in
CeresLib/include/CeresLib/: CeresLib.hpp
CeresLib/source/: CeresLib.cpp
EigenApp/: CMakeLists.txt
EigenApp/source/: main.cpp
EigenLib/: CMakeLists.txt  README.md
EigenLib/cmake/: cpack.cmake  dependencies.cmake  install.cmake  version.hpp.in
EigenLib/include/EigenLib/: EigenLib.hpp
EigenLib/source/: EigenLib.cpp
app1/: CMakeLists.txt
app1/cmake/: install.cmake
app1/source/: main.cpp
app2/: CMakeLists.txt  README.md
app2/cmake/: install.cmake
app2/source/: main.cpp
dependencies/ceres/: CMakeLists.txt
dependencies/eigen/: CMakeLists.txt
one/: CMakeLists.txt  LICENSE
one/cmake/: compileOptions.cmake  install.cmake  version.hpp.in
one/include/one/: one.hpp
one/source/: one.cpp
scripts/: build  clean  clean-all  clean-dependencies  install  package
two/: CMakeLists.txt  README.md
two/cmake/: addSubmodules.cmake  compileOptions.cmake  cpack.cmake  version.hpp.in
two/modules/core/: CMakeLists.txt
two/modules/core/include/two/core/: core.hpp
two/modules/core/source/: core.cpp
two/modules/io/: CMakeLists.txt
two/modules/io/include/two/: io.hpp
two/modules/io/include/two/io/: read.hpp  write.hpp
two/modules/io/source/: read.cpp  write.cpp
two/modules/math/include/two/: math.hpp
two/modules/math/include/two/math/: exp.hpp  sqrt.hpp
two/modules/math/source/: exp.cpp  sqrt.cpp
